--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "expo-linear-gradient": "~9.1.0",
-    "expo-font": "~9.1.0"
+    "expo-font": "~9.1.0",
+    "react-native-webview": "11.2.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
